# linapp-api

./: .env  .gitignore  Cargo.toml  Dockerfile  Procfile  Readme.md  Todo.md  app.json  docker-compose.yaml
doc/: api.md  test.sh
migrations/2019-10-30-205119_init/: down.sql  up.sql
src/: error.rs  location.rs  login.rs  main.rs
src/doctor/: mod.rs  models.rs
src/sync_service/: broadcaster.rs  mod.rs
src/tickets/: errors.rs  mod.rs  models.rs
src/users_notification/: mod.rs
tools/: run-env.sh
tools/test-client/: main.py  requirements.txt
