[package]
name = "azap-api"
version = "0.1.0"
authors = ["augustin <cheron.augustin@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.2"
listenfd = "0.3"
actix-web = "2"
actix-rt = "1"
actix-files = " 0.2.1"
actix-cors = "0.2.0"
actix-session = "0.3.0"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.2"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
postgres-types = {version = "0.1.0-alpha.1", features = ["derive", "with-chrono-0_4"]}
reqwest={version = "0.10.1", features = ["json"]}
futures = "0.3.1"
tokio = "0.2"
scrypt = "0.2.0"